@@ -1,0 +1,5 @@
+$NetBSD: distinfo-2022.04,v 1.1 2022/07/10 16:32:43 brook Exp $
+
+BLAKE2s (u-boot-2022.04.tar.bz2) = f30bb94e07143168fc352e2840e4c8517716b90dfbedb196cc26c4d2c4e5b88a
+SHA512 (u-boot-2022.04.tar.bz2) = 113056e542db049eea3b1d1ccbbe52c79539a2f9bb6129d284ec9200dcffec7bd5969821913a9899631575b80991c84ad01bc845b4bba614e42e54466d9f0d64
+Size (u-boot-2022.04.tar.bz2) = 17772787 bytes
